Kaggle Notebook | Python Learning | Version 10

--- a/python-learning.ipynb
+++ b/python-learning.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "765edc47",
+   "id": "be8c3b25",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2025-10-25T07:56:47.500182Z",
-     "iopub.status.busy": "2025-10-25T07:56:47.499870Z",
-     "iopub.status.idle": "2025-10-25T07:56:49.673139Z",
-     "shell.execute_reply": "2025-10-25T07:56:49.672252Z"
+     "iopub.execute_input": "2025-10-25T11:15:26.170993Z",
+     "iopub.status.busy": "2025-10-25T11:15:26.170565Z",
+     "iopub.status.idle": "2025-10-25T11:15:28.262890Z",
+     "shell.execute_reply": "2025-10-25T11:15:28.261608Z"
     },
     "papermill": {
-     "duration": 2.180133,
-     "end_time": "2025-10-25T07:56:49.674947",
+     "duration": 2.099958,
+     "end_time": "2025-10-25T11:15:28.264951",
      "exception": false,
-     "start_time": "2025-10-25T07:56:47.494814",
+     "start_time": "2025-10-25T11:15:26.164993",
      "status": "completed"
     },
     "tags": []
@@ -46,19 +46,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5caffe5b",
+   "id": "020a7d2c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-25T07:56:49.682379Z",
-     "iopub.status.busy": "2025-10-25T07:56:49.681910Z",
-     "iopub.status.idle": "2025-10-25T07:56:49.690485Z",
-     "shell.execute_reply": "2025-10-25T07:56:49.689514Z"
+     "iopub.execute_input": "2025-10-25T11:15:28.274054Z",
+     "iopub.status.busy": "2025-10-25T11:15:28.273359Z",
+     "iopub.status.idle": "2025-10-25T11:15:28.284206Z",
+     "shell.execute_reply": "2025-10-25T11:15:28.282831Z"
     },
     "papermill": {
-     "duration": 0.013862,
-     "end_time": "2025-10-25T07:56:49.691985",
+     "duration": 0.017836,
+     "end_time": "2025-10-25T11:15:28.286243",
      "exception": false,
-     "start_time": "2025-10-25T07:56:49.678123",
+     "start_time": "2025-10-25T11:15:28.268407",
      "status": "completed"
     },
     "tags": []
@@ -133,19 +133,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "b13eaa26",
+   "id": "8276526c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-25T07:56:49.698880Z",
-     "iopub.status.busy": "2025-10-25T07:56:49.698478Z",
-     "iopub.status.idle": "2025-10-25T07:56:49.706101Z",
-     "shell.execute_reply": "2025-10-25T07:56:49.704974Z"
+     "iopub.execute_input": "2025-10-25T11:15:28.294690Z",
+     "iopub.status.busy": "2025-10-25T11:15:28.294288Z",
+     "iopub.status.idle": "2025-10-25T11:15:28.304677Z",
+     "shell.execute_reply": "2025-10-25T11:15:28.303104Z"
     },
     "papermill": {
-     "duration": 0.0132,
-     "end_time": "2025-10-25T07:56:49.708075",
+     "duration": 0.017214,
+     "end_time": "2025-10-25T11:15:28.306860",
      "exception": false,
-     "start_time": "2025-10-25T07:56:49.694875",
+     "start_time": "2025-10-25T11:15:28.289646",
      "status": "completed"
     },
     "tags": []
@@ -217,19 +217,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3634c8c0",
+   "id": "b52c0711",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-25T07:56:49.715903Z",
-     "iopub.status.busy": "2025-10-25T07:56:49.715466Z",
-     "iopub.status.idle": "2025-10-25T07:56:49.725462Z",
-     "shell.execute_reply": "2025-10-25T07:56:49.724547Z"
+     "iopub.execute_input": "2025-10-25T11:15:28.315077Z",
+     "iopub.status.busy": "2025-10-25T11:15:28.314680Z",
+     "iopub.status.idle": "2025-10-25T11:15:28.328115Z",
+     "shell.execute_reply": "2025-10-25T11:15:28.326790Z"
     },
     "papermill": {
-     "duration": 0.015704,
-     "end_time": "2025-10-25T07:56:49.726937",
+     "duration": 0.019694,
+     "end_time": "2025-10-25T11:15:28.330017",
      "exception": false,
-     "start_time": "2025-10-25T07:56:49.711233",
+     "start_time": "2025-10-25T11:15:28.310323",
      "status": "completed"
     },
     "tags": []
@@ -327,19 +327,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f6f6f022",
+   "id": "9cf78859",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-25T07:56:49.734889Z",
-     "iopub.status.busy": "2025-10-25T07:56:49.734559Z",
-     "iopub.status.idle": "2025-10-25T07:56:49.741732Z",
-     "shell.execute_reply": "2025-10-25T07:56:49.740645Z"
+     "iopub.execute_input": "2025-10-25T11:15:28.339090Z",
+     "iopub.status.busy": "2025-10-25T11:15:28.338617Z",
+     "iopub.status.idle": "2025-10-25T11:15:28.346635Z",
+     "shell.execute_reply": "2025-10-25T11:15:28.345272Z"
     },
     "papermill": {
-     "duration": 0.01316,
-     "end_time": "2025-10-25T07:56:49.743320",
+     "duration": 0.014947,
+     "end_time": "2025-10-25T11:15:28.348744",
      "exception": false,
-     "start_time": "2025-10-25T07:56:49.730160",
+     "start_time": "2025-10-25T11:15:28.333797",
      "status": "completed"
     },
     "tags": []
@@ -372,10 +372,22 @@
     "    \"\"\"\n",
     "    l3 = l1 + l2\n",
     "    l4 = list(set(l3))\n",
-    "    l5 = {i: l3.count(i) for i in l3}\n",
-    "    l5 = [k for k,v in l5.items() if v == 2]\n",
-    "    return (l3,l4,l5)\n",
     "\n",
+    "    #----------- approach 1 -----------------\n",
+    "    # l5 = {i: l3.count(i) for i in l3}\n",
+    "    # l5 = [k for k,v in l5.items() if v == 2]\n",
+    "\n",
+    "    #----------- approach 2 -----------------\n",
+    "    occur_list = {}\n",
+    "    for i in l3:\n",
+    "        if i in occur_list:\n",
+    "            occur_list[i]= occur_list[i]+1\n",
+    "        else:\n",
+    "            occur_list[i] = 1\n",
+    "    l5= [k for k,v in occur_list.items() if v==2]\n",
+    "    \n",
+    "    return(l3,l4,l5)\n",
+    "    \n",
     "if __name__ == \"__main__\":\n",
     "    l1 = [1, 2, 3, 4]\n",
     "    l2 = [3, 4, 5, 6]\n",
@@ -385,19 +397,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ccf51f01",
+   "id": "ba2f3c08",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-25T07:56:49.750560Z",
-     "iopub.status.busy": "2025-10-25T07:56:49.750206Z",
-     "iopub.status.idle": "2025-10-25T07:56:49.757568Z",
-     "shell.execute_reply": "2025-10-25T07:56:49.756635Z"
+     "iopub.execute_input": "2025-10-25T11:15:28.357971Z",
+     "iopub.status.busy": "2025-10-25T11:15:28.357559Z",
+     "iopub.status.idle": "2025-10-25T11:15:28.368174Z",
+     "shell.execute_reply": "2025-10-25T11:15:28.366463Z"
     },
     "papermill": {
-     "duration": 0.012817,
-     "end_time": "2025-10-25T07:56:49.759193",
+     "duration": 0.017731,
+     "end_time": "2025-10-25T11:15:28.370251",
      "exception": false,
-     "start_time": "2025-10-25T07:56:49.746376",
+     "start_time": "2025-10-25T11:15:28.352520",
      "status": "completed"
     },
     "tags": []
@@ -454,19 +466,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d5073d0f",
+   "id": "da70a06d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-25T07:56:49.766975Z",
-     "iopub.status.busy": "2025-10-25T07:56:49.766187Z",
-     "iopub.status.idle": "2025-10-25T07:56:49.774410Z",
-     "shell.execute_reply": "2025-10-25T07:56:49.773534Z"
+     "iopub.execute_input": "2025-10-25T11:15:28.379799Z",
+     "iopub.status.busy": "2025-10-25T11:15:28.378997Z",
+     "iopub.status.idle": "2025-10-25T11:15:28.389728Z",
+     "shell.execute_reply": "2025-10-25T11:15:28.388121Z"
     },
     "papermill": {
-     "duration": 0.013697,
-     "end_time": "2025-10-25T07:56:49.776065",
+     "duration": 0.017842,
+     "end_time": "2025-10-25T11:15:28.391832",
      "exception": false,
-     "start_time": "2025-10-25T07:56:49.762368",
+     "start_time": "2025-10-25T11:15:28.373990",
      "status": "completed"
     },
     "tags": []
@@ -530,19 +542,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "eebc5d37",
+   "id": "dd312e2f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-25T07:56:49.784210Z",
-     "iopub.status.busy": "2025-10-25T07:56:49.783680Z",
-     "iopub.status.idle": "2025-10-25T07:56:49.796772Z",
-     "shell.execute_reply": "2025-10-25T07:56:49.795727Z"
+     "iopub.execute_input": "2025-10-25T11:15:28.401972Z",
+     "iopub.status.busy": "2025-10-25T11:15:28.400798Z",
+     "iopub.status.idle": "2025-10-25T11:15:28.415069Z",
+     "shell.execute_reply": "2025-10-25T11:15:28.413757Z"
     },
     "papermill": {
-     "duration": 0.018991,
-     "end_time": "2025-10-25T07:56:49.798397",
+     "duration": 0.021627,
+     "end_time": "2025-10-25T11:15:28.416928",
      "exception": false,
-     "start_time": "2025-10-25T07:56:49.779406",
+     "start_time": "2025-10-25T11:15:28.395301",
      "status": "completed"
     },
     "tags": []
@@ -555,10 +567,10 @@
       "This is Problem statement. Let's get started !....\n",
       "14.0\n",
       "['Side']\n",
-      "- Burger (Main) - 8.5\n",
-      "- Fries (Side) - 3.0\n",
-      "- Coke (Drink) - 2.5\n",
-      "Total: 14.0\n",
+      "- Burger (Main) - $8.5\n",
+      "- Fries (Side) - $3.0\n",
+      "- Coke (Drink) - $2.5\n",
+      "Total: $14.0\n",
       "20\n"
      ]
     }
@@ -632,8 +644,8 @@
     "    def __str__(self) -> str:\n",
     "        lines = []\n",
     "        for item in self.cart:\n",
-    "            lines.append(f\"- {item.name} ({item.category}) - {item.price}\")\n",
-    "        lines.append(f\"Total: {str(self.total)}\")\n",
+    "            lines.append(f\"- {item.name} ({item.category}) - ${item.price}\")\n",
+    "        lines.append(f\"Total: ${str(self.total)}\")\n",
     "        return \"\\n\".join(lines)\n",
     "    \n",
     "\n",
@@ -653,19 +665,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0143c58a",
+   "id": "f55cc5a9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-25T07:56:49.806307Z",
-     "iopub.status.busy": "2025-10-25T07:56:49.805969Z",
-     "iopub.status.idle": "2025-10-25T07:56:49.813022Z",
-     "shell.execute_reply": "2025-10-25T07:56:49.812076Z"
+     "iopub.execute_input": "2025-10-25T11:15:28.425862Z",
+     "iopub.status.busy": "2025-10-25T11:15:28.425471Z",
+     "iopub.status.idle": "2025-10-25T11:15:28.433787Z",
+     "shell.execute_reply": "2025-10-25T11:15:28.432515Z"
     },
     "papermill": {
-     "duration": 0.012837,
-     "end_time": "2025-10-25T07:56:49.814701",
+     "duration": 0.014996,
+     "end_time": "2025-10-25T11:15:28.435608",
      "exception": false,
-     "start_time": "2025-10-25T07:56:49.801864",
+     "start_time": "2025-10-25T11:15:28.420612",
      "status": "completed"
     },
     "tags": []
@@ -698,14 +710,124 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "id": "f166099a",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-25T11:15:28.445382Z",
+     "iopub.status.busy": "2025-10-25T11:15:28.444125Z",
+     "iopub.status.idle": "2025-10-25T11:15:28.457373Z",
+     "shell.execute_reply": "2025-10-25T11:15:28.456216Z"
+    },
+    "papermill": {
+     "duration": 0.019882,
+     "end_time": "2025-10-25T11:15:28.459131",
+     "exception": false,
+     "start_time": "2025-10-25T11:15:28.439249",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is bank system problem statement.Let's get started started!!.....\n",
+      "Savings Account: SA001, Balance: $1000.0, Interest Rate: 5.0%\n",
+      "50.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# -------------------- BANK ACCOUNT SYSTEM --------------------\n",
+    "class ProblemStatement:\n",
+    "    \"\"\"\n",
+    "    Build a Bank Account system using classes (exact names required):\n",
+    "    \n",
+    "    Base class: Account with attributes account_number: str, balance: float = 0.0\n",
+    "    Implement methods:\n",
+    "        deposit(amount: float) -> None\n",
+    "        withdraw(amount: float) -> bool (returns True if successful, False if insufficient funds)\n",
+    "        __str__() -> str returning: \"Account: <account_number>, Balance: $<balance>\"\n",
+    "    \n",
+    "    Subclasses:\n",
+    "    SavingsAccount(Account) - adds attribute interest_rate: float\n",
+    "        Override __str__() to return: \"Savings Account: <account_number>, Balance: $<balance>, Interest Rate: <interest_rate>%\"\n",
+    "        Implement calculate_interest() -> float that returns balance * interest_rate / 100\n",
+    "    \n",
+    "    CheckingAccount(Account) - adds attribute overdraft_limit: float\n",
+    "        Override withdraw() to allow overdraft up to overdraft_limit\n",
+    "        Override __str__() to return: \"Checking Account: <account_number>, Balance: $<balance>, Overdraft Limit: $<overdraft_limit>\"\n",
+    "    \n",
+    "    Example:\n",
+    "    acc = SavingsAccount(\"SA001\", 1000.0, 5.0)\n",
+    "    print(acc)\n",
+    "    print(acc.calculate_interest())\n",
+    "    \n",
+    "    Expected Output:\n",
+    "    Savings Account: SA001, Balance: $1000.00, Interest Rate: 5.0%\n",
+    "    50.0\n",
+    "    \"\"\"\n",
+    "    def __init__(self)->None:\n",
+    "        self.description = \"This is bank system problem statement.Let's get started started!!.....\"\n",
+    "    def __str__(self)->str:\n",
+    "        return self.description\n",
+    "class Account:\n",
+    "    def __init__(self,account_number: str, balance: float = 0.0)->None:\n",
+    "        self.account_number = account_number\n",
+    "        self.balance = balance\n",
+    "    def deposit(self,amount: float) -> None:\n",
+    "        self.balance = self.balance + amount\n",
+    "    def withdraw(self,amount: float) -> bool:\n",
+    "        if self.balance>self.amount:\n",
+    "            self.balance = self.balance - amount\n",
+    "            return True\n",
+    "        return False\n",
+    "    def __str__(self) -> str:\n",
+    "        return f\"Account:{self.account_number}, Balance: ${self.balance}\"\n",
+    "        \n",
+    "class SavingsAccount(Account):\n",
+    "    def __init__(self,account_number: str, balance: float,interest_rate: float)->None:\n",
+    "        self.interest_rate = interest_rate\n",
+    "        super().__init__(account_number,balance) #intializing the subclass using super() method\n",
+    "    def calculate_interest(self) -> float :\n",
+    "        return (self.balance * self.interest_rate) / 100\n",
+    "    def __str__(self)->None:\n",
+    "        return f\"Savings Account: {self.account_number}, Balance: ${self.balance}, Interest Rate: {self.interest_rate}%\"\n",
+    "        \n",
+    "class CheckingAccount(Account):\n",
+    "    def __init__(self,account_number: str, balance: float,overdraft_limit: float)->None:\n",
+    "        self.overdraft_limit = overdraft_limit\n",
+    "        Account.__init__(self,account_number,balance) #intializing the subclass using class not using super() method\n",
+    "    def withdraw(self,amount: float) -> bool:\n",
+    "        if self.balance >amount:\n",
+    "            self.balance = self.balance - amount\n",
+    "            return True\n",
+    "        elif self.overdraft_limit > amount:\n",
+    "            self.overdraft_limit = self.overdraft_limit - amount\n",
+    "            return True\n",
+    "        return False\n",
+    "    def __str__(self) -> str:\n",
+    "        return f\"Checking Account:{self.account_number}, Balance: ${self.balance}, Overdraft Limit: ${self.overdraft_limit}\"\n",
+    "\n",
+    "if __name__==\"__main__\":\n",
+    "    print(ProblemStatement())\n",
+    "    acc = SavingsAccount(\"SA001\", 1000.0, 5.0)\n",
+    "    print(acc)\n",
+    "    print(acc.calculate_interest())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1ab862ad",
+   "id": "2bb218fb",
    "metadata": {
     "papermill": {
-     "duration": 0.002923,
-     "end_time": "2025-10-25T07:56:49.820925",
+     "duration": 0.003348,
+     "end_time": "2025-10-25T11:15:28.466314",
      "exception": false,
-     "start_time": "2025-10-25T07:56:49.818002",
+     "start_time": "2025-10-25T11:15:28.462966",
      "status": "completed"
     },
     "tags": []
@@ -743,14 +865,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 8.499511,
-   "end_time": "2025-10-25T07:56:50.345689",
+   "duration": 8.439026,
+   "end_time": "2025-10-25T11:15:29.092135",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-10-25T07:56:41.846178",
+   "start_time": "2025-10-25T11:15:20.653109",
    "version": "2.6.0"
   }
  },
