Kaggle Notebook | Python Learning | Version 12

--- a/python-learning.ipynb
+++ b/python-learning.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4eda3da7",
+   "id": "140d9e0c",
    "metadata": {
     "_cell_guid": "b1076dfc-b9ad-4769-8c92-a6c4dae69d19",
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5",
     "execution": {
-     "iopub.execute_input": "2025-10-25T16:30:47.332639Z",
-     "iopub.status.busy": "2025-10-25T16:30:47.332282Z",
-     "iopub.status.idle": "2025-10-25T16:30:49.141290Z",
-     "shell.execute_reply": "2025-10-25T16:30:49.140404Z"
+     "iopub.execute_input": "2025-10-26T01:14:51.787197Z",
+     "iopub.status.busy": "2025-10-26T01:14:51.786776Z",
+     "iopub.status.idle": "2025-10-26T01:14:53.843425Z",
+     "shell.execute_reply": "2025-10-26T01:14:53.842225Z"
     },
     "papermill": {
-     "duration": 1.815591,
-     "end_time": "2025-10-25T16:30:49.143035",
+     "duration": 2.064107,
+     "end_time": "2025-10-26T01:14:53.845346",
      "exception": false,
-     "start_time": "2025-10-25T16:30:47.327444",
+     "start_time": "2025-10-26T01:14:51.781239",
      "status": "completed"
     },
     "tags": []
@@ -46,19 +46,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c05835e1",
+   "id": "5cda7e5d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-25T16:30:49.150953Z",
-     "iopub.status.busy": "2025-10-25T16:30:49.150480Z",
-     "iopub.status.idle": "2025-10-25T16:30:49.158914Z",
-     "shell.execute_reply": "2025-10-25T16:30:49.157845Z"
+     "iopub.execute_input": "2025-10-26T01:14:53.853667Z",
+     "iopub.status.busy": "2025-10-26T01:14:53.853276Z",
+     "iopub.status.idle": "2025-10-26T01:14:53.862507Z",
+     "shell.execute_reply": "2025-10-26T01:14:53.861270Z"
     },
     "papermill": {
-     "duration": 0.014212,
-     "end_time": "2025-10-25T16:30:49.160415",
+     "duration": 0.01524,
+     "end_time": "2025-10-26T01:14:53.864132",
      "exception": false,
-     "start_time": "2025-10-25T16:30:49.146203",
+     "start_time": "2025-10-26T01:14:53.848892",
      "status": "completed"
     },
     "tags": []
@@ -94,7 +94,7 @@
     "    (7, 'hEllO wOrld', 2)\n",
     "    (12, 'PythOn PrOgrAmmIng', 2)\n",
     "    \"\"\"\n",
-    "\n",
+    "              \n",
     "    #it will find character occurances\n",
     "    #reduced_string = set(s)\n",
     "    #char_count = [{i:s.count(i)} for i in reduced_string]\n",
@@ -133,19 +133,19 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e1824b58",
+   "id": "b0457eed",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-25T16:30:49.167489Z",
-     "iopub.status.busy": "2025-10-25T16:30:49.167208Z",
-     "iopub.status.idle": "2025-10-25T16:30:49.175033Z",
-     "shell.execute_reply": "2025-10-25T16:30:49.174007Z"
+     "iopub.execute_input": "2025-10-26T01:14:53.872222Z",
+     "iopub.status.busy": "2025-10-26T01:14:53.871872Z",
+     "iopub.status.idle": "2025-10-26T01:14:53.880353Z",
+     "shell.execute_reply": "2025-10-26T01:14:53.879021Z"
     },
     "papermill": {
-     "duration": 0.012983,
-     "end_time": "2025-10-25T16:30:49.176585",
+     "duration": 0.014396,
+     "end_time": "2025-10-26T01:14:53.881902",
      "exception": false,
-     "start_time": "2025-10-25T16:30:49.163602",
+     "start_time": "2025-10-26T01:14:53.867506",
      "status": "completed"
     },
     "tags": []
@@ -217,19 +217,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "71110414",
+   "id": "a1efa319",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-25T16:30:49.183595Z",
-     "iopub.status.busy": "2025-10-25T16:30:49.183294Z",
-     "iopub.status.idle": "2025-10-25T16:30:49.192778Z",
-     "shell.execute_reply": "2025-10-25T16:30:49.191830Z"
+     "iopub.execute_input": "2025-10-26T01:14:53.891995Z",
+     "iopub.status.busy": "2025-10-26T01:14:53.891670Z",
+     "iopub.status.idle": "2025-10-26T01:14:53.902314Z",
+     "shell.execute_reply": "2025-10-26T01:14:53.901065Z"
     },
     "papermill": {
-     "duration": 0.014519,
-     "end_time": "2025-10-25T16:30:49.194202",
+     "duration": 0.018711,
+     "end_time": "2025-10-26T01:14:53.904187",
      "exception": false,
-     "start_time": "2025-10-25T16:30:49.179683",
+     "start_time": "2025-10-26T01:14:53.885476",
      "status": "completed"
     },
     "tags": []
@@ -327,19 +327,19 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "184848f1",
+   "id": "7b2e593c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-25T16:30:49.202010Z",
-     "iopub.status.busy": "2025-10-25T16:30:49.200978Z",
-     "iopub.status.idle": "2025-10-25T16:30:49.208418Z",
-     "shell.execute_reply": "2025-10-25T16:30:49.207487Z"
+     "iopub.execute_input": "2025-10-26T01:14:53.912460Z",
+     "iopub.status.busy": "2025-10-26T01:14:53.912117Z",
+     "iopub.status.idle": "2025-10-26T01:14:53.920586Z",
+     "shell.execute_reply": "2025-10-26T01:14:53.919628Z"
     },
     "papermill": {
-     "duration": 0.012729,
-     "end_time": "2025-10-25T16:30:49.210061",
+     "duration": 0.014311,
+     "end_time": "2025-10-26T01:14:53.922130",
      "exception": false,
-     "start_time": "2025-10-25T16:30:49.197332",
+     "start_time": "2025-10-26T01:14:53.907819",
      "status": "completed"
     },
     "tags": []
@@ -397,19 +397,19 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "14c4b373",
+   "id": "0471d9e2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-25T16:30:49.217109Z",
-     "iopub.status.busy": "2025-10-25T16:30:49.216809Z",
-     "iopub.status.idle": "2025-10-25T16:30:49.223733Z",
-     "shell.execute_reply": "2025-10-25T16:30:49.222724Z"
+     "iopub.execute_input": "2025-10-26T01:14:53.930749Z",
+     "iopub.status.busy": "2025-10-26T01:14:53.930068Z",
+     "iopub.status.idle": "2025-10-26T01:14:53.938342Z",
+     "shell.execute_reply": "2025-10-26T01:14:53.936838Z"
     },
     "papermill": {
-     "duration": 0.012039,
-     "end_time": "2025-10-25T16:30:49.225056",
+     "duration": 0.014363,
+     "end_time": "2025-10-26T01:14:53.939977",
      "exception": false,
-     "start_time": "2025-10-25T16:30:49.213017",
+     "start_time": "2025-10-26T01:14:53.925614",
      "status": "completed"
     },
     "tags": []
@@ -466,19 +466,19 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "5bbf4764",
+   "id": "d2396868",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-25T16:30:49.232900Z",
-     "iopub.status.busy": "2025-10-25T16:30:49.232028Z",
-     "iopub.status.idle": "2025-10-25T16:30:49.239815Z",
-     "shell.execute_reply": "2025-10-25T16:30:49.238963Z"
+     "iopub.execute_input": "2025-10-26T01:14:53.948473Z",
+     "iopub.status.busy": "2025-10-26T01:14:53.948132Z",
+     "iopub.status.idle": "2025-10-26T01:14:53.956619Z",
+     "shell.execute_reply": "2025-10-26T01:14:53.955514Z"
     },
     "papermill": {
-     "duration": 0.012877,
-     "end_time": "2025-10-25T16:30:49.241118",
+     "duration": 0.015019,
+     "end_time": "2025-10-26T01:14:53.958509",
      "exception": false,
-     "start_time": "2025-10-25T16:30:49.228241",
+     "start_time": "2025-10-26T01:14:53.943490",
      "status": "completed"
     },
     "tags": []
@@ -542,19 +542,19 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "fb9a3e68",
+   "id": "1d911e38",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-25T16:30:49.248489Z",
-     "iopub.status.busy": "2025-10-25T16:30:49.248174Z",
-     "iopub.status.idle": "2025-10-25T16:30:49.259740Z",
-     "shell.execute_reply": "2025-10-25T16:30:49.258716Z"
+     "iopub.execute_input": "2025-10-26T01:14:53.967100Z",
+     "iopub.status.busy": "2025-10-26T01:14:53.966738Z",
+     "iopub.status.idle": "2025-10-26T01:14:53.979461Z",
+     "shell.execute_reply": "2025-10-26T01:14:53.978103Z"
     },
     "papermill": {
-     "duration": 0.016956,
-     "end_time": "2025-10-25T16:30:49.261163",
+     "duration": 0.018951,
+     "end_time": "2025-10-26T01:14:53.981107",
      "exception": false,
-     "start_time": "2025-10-25T16:30:49.244207",
+     "start_time": "2025-10-26T01:14:53.962156",
      "status": "completed"
     },
     "tags": []
@@ -665,19 +665,19 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "473b4aee",
+   "id": "a66aac51",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-25T16:30:49.268297Z",
-     "iopub.status.busy": "2025-10-25T16:30:49.268038Z",
-     "iopub.status.idle": "2025-10-25T16:30:49.274279Z",
-     "shell.execute_reply": "2025-10-25T16:30:49.273371Z"
+     "iopub.execute_input": "2025-10-26T01:14:53.990257Z",
+     "iopub.status.busy": "2025-10-26T01:14:53.989308Z",
+     "iopub.status.idle": "2025-10-26T01:14:53.996740Z",
+     "shell.execute_reply": "2025-10-26T01:14:53.995532Z"
     },
     "papermill": {
-     "duration": 0.01144,
-     "end_time": "2025-10-25T16:30:49.275761",
+     "duration": 0.013794,
+     "end_time": "2025-10-26T01:14:53.998473",
      "exception": false,
-     "start_time": "2025-10-25T16:30:49.264321",
+     "start_time": "2025-10-26T01:14:53.984679",
      "status": "completed"
     },
     "tags": []
@@ -711,19 +711,19 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "bc840e8e",
+   "id": "e80684f6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-10-25T16:30:49.283289Z",
-     "iopub.status.busy": "2025-10-25T16:30:49.283012Z",
-     "iopub.status.idle": "2025-10-25T16:30:49.293840Z",
-     "shell.execute_reply": "2025-10-25T16:30:49.292859Z"
+     "iopub.execute_input": "2025-10-26T01:14:54.007034Z",
+     "iopub.status.busy": "2025-10-26T01:14:54.006724Z",
+     "iopub.status.idle": "2025-10-26T01:14:54.019649Z",
+     "shell.execute_reply": "2025-10-26T01:14:54.018221Z"
     },
     "papermill": {
-     "duration": 0.016286,
-     "end_time": "2025-10-25T16:30:49.295284",
+     "duration": 0.019192,
+     "end_time": "2025-10-26T01:14:54.021362",
      "exception": false,
-     "start_time": "2025-10-25T16:30:49.278998",
+     "start_time": "2025-10-26T01:14:54.002170",
      "status": "completed"
     },
     "tags": []
@@ -817,6 +817,125 @@
     "    print(acc)\n",
     "    print(acc.calculate_interest())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "4e57baa7",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-10-26T01:14:54.030190Z",
+     "iopub.status.busy": "2025-10-26T01:14:54.029819Z",
+     "iopub.status.idle": "2025-10-26T01:14:54.042644Z",
+     "shell.execute_reply": "2025-10-26T01:14:54.041591Z"
+    },
+    "papermill": {
+     "duration": 0.019196,
+     "end_time": "2025-10-26T01:14:54.044313",
+     "exception": false,
+     "start_time": "2025-10-26T01:14:54.025117",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is Employee Management System.Let's Solve this!....\n",
+      "140000\n",
+      "['Alice']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# -------------------- EMPLOYEE MANAGEMENT SYSTEM --------------------\n",
+    "class EmsProblem:\n",
+    "    \"\"\"\n",
+    "    Employee Management system (exact names required):\n",
+    "    \n",
+    "    Class Department with attributes: dept_id: str, name: str\n",
+    "    Class Employee with attributes: emp_id: str, name: str, salary: float, \n",
+    "    department: Department. Methods:\n",
+    "        give_raise(self, percentage: float) -> None (increase salary by percentage)\n",
+    "        __str__() -> str - display employee info with department\n",
+    "    \n",
+    "    Class Company with attribute employees: list. Methods:\n",
+    "        add_employee(self, employee: Employee) -> None\n",
+    "        get_total_salary(self) -> float\n",
+    "        get_employees_by_department(self, dept_name: str) -> list (return list of employee names)\n",
+    "        __str__() -> str - display all employees\n",
+    "    \n",
+    "    Example:\n",
+    "    \n",
+    "    dept1 = Department(\"D001\", \"Engineering\")\n",
+    "    dept2 = Department(\"D002\", \"Sales\")\n",
+    "    emp1 = Employee(\"E001\", \"Alice\", 80000, dept1)\n",
+    "    emp2 = Employee(\"E002\", \"Bob\", 60000, dept2)\n",
+    "    \n",
+    "    company = Company()\n",
+    "    company.add_employee(emp1)\n",
+    "    company.add_employee(emp2)\n",
+    "    \n",
+    "    print(company.get_total_salary())\n",
+    "    print(company.get_employees_by_department(\"Engineering\"))\n",
+    "    \n",
+    "    Expected Output:\n",
+    "    140000.0\n",
+    "    ['Alice']\n",
+    "    \"\"\"\n",
+    "    def __init__(self):\n",
+    "        self.description = \"This is Employee Management System.Let's Solve this!....\"\n",
+    "    def __str__(self):\n",
+    "        return self.description\n",
+    "        \n",
+    "class Department:\n",
+    "    def __init__(self,dept_id: str, name: str) ->None:\n",
+    "        self.dept_id = dept_id\n",
+    "        self.name = name\n",
+    "   \n",
+    "class Employee:\n",
+    "    def __init__(self,emp_id: str,name: str, salary: float,department: Department) ->None:\n",
+    "        self.emp_id= emp_id\n",
+    "        self.name = name\n",
+    "        self.salary = salary\n",
+    "        self.department = department\n",
+    "        \n",
+    "    def  give_raise(self, percentage: float,) -> None:\n",
+    "        self.percentage = percentage\n",
+    "        self.salary = self.salary + (self.salary*self.percentage)/100\n",
+    "    \n",
+    "    def __str__() -> str:\n",
+    "        return f\"Employee: {self.name} (ID: {self.emp_id}), Salary: ${self.salary:.2f}, Department: {self.department.name}\"\n",
+    "        \n",
+    "        \n",
+    "class Company:\n",
+    "    def __init__(self)->None:\n",
+    "        self.Employee_Details = []\n",
+    "    def add_employee(self, employee: Employee) -> None:\n",
+    "        self.Employee_Details.append(employee)\n",
+    "    def get_total_salary(self) -> float:\n",
+    "        return sum([employee.salary for employee in self.Employee_Details])\n",
+    "    def get_employees_by_department(self, dept_name: str) -> list:\n",
+    "        return [employee.name for employee in self.Employee_Details if employee.department.name == dept_name]\n",
+    "    def __str__() -> str:\n",
+    "        return \"\\n\".join(str(emp) for emp in self.employees)\n",
+    "    \n",
+    "if __name__ == \"__main__\":\n",
+    "    print(EmsProblem())\n",
+    "    dept1 = Department(\"D001\", \"Engineering\")\n",
+    "    dept2 = Department(\"D002\", \"Sales\")\n",
+    "    emp1 = Employee(\"E001\", \"Alice\", 80000, dept1)\n",
+    "    emp2 = Employee(\"E002\", \"Bob\", 60000, dept2)\n",
+    "    \n",
+    "    company = Company()\n",
+    "    company.add_employee(emp1)\n",
+    "    company.add_employee(emp2)\n",
+    "    \n",
+    "    print(company.get_total_salary())\n",
+    "    print(company.get_employees_by_department(\"Engineering\"))"
+   ]
   }
  ],
  "metadata": {
@@ -848,14 +967,14 @@
   },
   "papermill": {
    "default_parameters": {},
-   "duration": 6.905417,
-   "end_time": "2025-10-25T16:30:49.818701",
+   "duration": 7.872674,
+   "end_time": "2025-10-26T01:14:54.568627",
    "environment_variables": {},
    "exception": null,
    "input_path": "__notebook__.ipynb",
    "output_path": "__notebook__.ipynb",
    "parameters": {},
-   "start_time": "2025-10-25T16:30:42.913284",
+   "start_time": "2025-10-26T01:14:46.695953",
    "version": "2.6.0"
   }
  },
